--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>wardrobe Maven Webapp</name>
     <url>http://maven.apache.org</url>
-    <dependencies>
 
+    <properties>
+        <spring.version>4.3.2.RELEASE</spring.version>
+        <jstl.version>1.2</jstl.version>
+    </properties>
+    <dependencies>
 
         <dependency>
             <groupId>junit</groupId>
@@ -44,11 +48,39 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.2.4.Final</version>
         </dependency>
+
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+
+        <!-- jstl -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+
+        <!-- Spring Core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
 
 
     </dependencies>
